@@ -1,4 +1,5 @@
 AUX libsnes-c++98-0.82-makefile.patch 362 RMD160 bb72e37ee9d30657ecd17dfbdc4f261445b30f5e SHA1 e99571876aee93f8a5fabfb56cc0b992da2d73aa SHA256 0cb5452a3cc027bdb3060663b198dc87809dfd6ad7bf94ddbe8c41a3c472661c
 EBUILD libsnes-c++98-0.82.ebuild 1173 RMD160 604851da740403b3dbdc10dd40f4b5558bef103e SHA1 0ccee260d0aa7476269d412784133f9e9eb9902e SHA256 01f3e08941d534a7095f30f3316c646fdc8cdd23bc6a78d9c58d11ae9c560025
-MISC ChangeLog 380 RMD160 dc5c1e400fddb7ee78e58d8cf14ec029ff6aa1c1 SHA1 d5e1a0f40fd25a8911af709e3ea3e63ef363eaed SHA256 54a9c00325fe70a777345ec439b3c6c23644bdd2b68068f77112e6cce8a3c8f1
+EBUILD libsnes-c++98-0.83.ebuild 1173 RMD160 604851da740403b3dbdc10dd40f4b5558bef103e SHA1 0ccee260d0aa7476269d412784133f9e9eb9902e SHA256 01f3e08941d534a7095f30f3316c646fdc8cdd23bc6a78d9c58d11ae9c560025
+MISC ChangeLog 503 RMD160 3f720446918a23bdad4ae96001abf41a9dfdfc48 SHA1 794930437e9ce7bf74be9e63c98439d9d8f688a2 SHA256 b1ede2879dc222e853b4e86625869bf5fc983c1c43c2f926f67adc83a4c80b45
 MISC metadata.xml 501 RMD160 ad98c31130246b2352c9db6a27705664b908d46a SHA1 2919ca9d7aa48ca6bd6e384b9de77778689a4964 SHA256 cf27c350cdfb751e411b56eae0f30b47c7619c2f4350b19b8e1e75c9b94c57bc
