@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libsnes-c++98-0.83 (14 Nov 2011)
+
+  14 Nov 2011; Michał Ziąbkowski <mziab@o2.pl> +libsnes-c++98-0.83.ebuild:
+  Bumped.
+
 *libsnes-c++98-0.82 (27 Sep 2011)
 
   27 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> +libsnes-c++98-0.82.ebuild,
